Add place overwrite for \makepracticetask

--- a/example/subfiles/main.tex
+++ b/example/subfiles/main.tex
@@ -56,7 +56,7 @@
         \item[\texttt{\textbackslash setonsite}:] устанавливает прохождение практики в университете;
         \item[\macro{maketitle}{practice|diary}:] печатает титульный лист отчёта по практике и дневника практики соотвественно;
         \item[\texttt{\textbackslash maketableofcontents}:] печатает содержание;
-        \item[\texttt{\textbackslash makepracticetask[n]}:] печатает лист задания на практику;
+        \item[\texttt{\textbackslash makepracticetask[place][n]}:] печатает лист задания на практику;
         \item[\texttt{\textbackslash diaryentry[mark]\{date\}\{place\}\{desc\}}:] добавляет строку в дневник практики;
         \item[\texttt{\textbackslash makediary}:] печатает дневник практики;
     \end{enumerate}
