--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -409,7 +409,7 @@
             ОТЧЁТ ПО ПРАКТИКЕ\\
             Учебная ознакомительная практика\\
         }
-        в пероид \@FEFUdaterange{true}{true}{2.75cm}\\
+        в период \@FEFUdaterange{true}{true}{2.75cm}\\
         в \@FEFUfield[наименование базы практики]{\@FEFUplace}{10cm}
         \vskip 42pt
         \begin{flushright}
