Update class path in example

--- a/example/document.tex
+++ b/example/document.tex
@@ -1,4 +1,4 @@
-\documentclass{fefu_thesis/cls/fefu}
+\documentclass{../cls/fefu}
 \usepackage{subfiles}
 
 % All necessary packages must be defined here
